--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 name: Ilias Leontiadis
 
 # Short bio or description (displayed in the header)
-description: Samsung AI, Cambridge
+description: Research Scientist @ Meta, London
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/4865851?s=460&v=4
